# cncmachine

./: README.md  pyproject.toml
clients/: axis.py  axis_widget.txt  camera_client.py  camera_control_widget.txt  motor_cal.py  motor_speed_client.py  motorcal.txt  parker6k8_cncinit.txt  softtrig_camera_client.py
speed_control/: speed_control.ino
