[project]
name = "cncmachine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ids-peak>=1.15.0.0.8",
    "ids-peak-common>=1.3.0.4212",
    "ids-peak-icv>=1.3.0.9744",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pyqt6>=6.11.0",
    "pyqtgraph>=0.14.0",
]
